--- a/config.json
+++ b/config.json
@@ -1,10 +1,14 @@
 {
+  "_comment": "or use file path [globs](https://www.npmjs.com/package/glob)",
   "source": [
     "output.json"
   ],
   "platforms": {
     "css": {
-      "transformGroup": "css",
+      "transforms": ["attribute/cti","name/cti/kebab","time/seconds",
+      "content/quote","size/pxToRem","color/css","type/fontFamilies",
+      "type/TextCase","type/TextDecoration","type/LetterSpacing",
+      "type/FontSizeRem"],
       "prefix": "adr",
       "buildPath": "style/css/",
       "files": [{
@@ -53,7 +57,7 @@
               "type": "shape",
               "filter":{
                 "attributes":{
-                  "category": "shape"
+                  "category": "size"
                 }
               }
           }
@@ -80,7 +84,6 @@
           }
       ]
     },
-  
 
     "android": {
       "transformGroup": "android",
@@ -109,6 +112,126 @@
       "files": [{
         "destination": "assets/data/properties.json",
         "format": "json"
+      }]
+    },
+
+    "compose": {
+      "transformGroup": "compose",
+      "buildPath": "build/compose/",
+      "files": [{
+        "destination": "StyleDictionaryColor.kt",
+        "format": "compose/object",
+        "className": "StyleDictionaryColor",
+        "packageName": "StyleDictionaryColor",
+        "filter": {
+          "attributes": {
+            "category": "color"
+          }
+        }
+      },{
+        "destination": "StyleDictionarySize.kt",
+        "format": "compose/object",
+        "className": "StyleDictionarySize",
+        "packageName": "StyleDictionarySize",
+        "type": "float",
+        "filter": {
+          "attributes": {
+            "category": "size"
+          }
+        }
+      }]
+    },
+    "ios": {
+      "transformGroup": "ios",
+      "buildPath": "build/ios/",
+      "files": [{
+        "destination": "StyleDictionaryColor.h",
+        "format": "ios/colors.h",
+        "className": "StyleDictionaryColor",
+        "type": "StyleDictionaryColorName",
+        "filter": {
+          "attributes": {
+            "category": "color"
+          }
+        }
+      },{
+        "destination": "StyleDictionaryColor.m",
+        "format": "ios/colors.m",
+        "className": "StyleDictionaryColor",
+        "type": "StyleDictionaryColorName",
+        "filter": {
+          "attributes": {
+            "category": "color"
+          }
+        }
+      },{
+        "destination": "StyleDictionarySize.h",
+        "format": "ios/static.h",
+        "className": "StyleDictionarySize",
+        "type": "float",
+        "filter": {
+          "attributes": {
+            "category": "size"
+          }
+        }
+      },{
+        "destination": "StyleDictionarySize.m",
+        "format": "ios/static.m",
+        "className": "StyleDictionarySize",
+        "type": "float",
+        "filter": {
+          "attributes": {
+            "category": "size"
+          }
+        }
+      }]
+    },
+    "ios-swift": {
+      "transformGroup": "ios-swift",
+      "buildPath": "build/ios-swift/",
+      "files": [{
+        "destination": "StyleDictionary+Class.swift",
+        "format": "ios-swift/class.swift",
+        "className": "StyleDictionaryClass",
+        "filter": {}
+      },{
+        "destination": "StyleDictionary+Enum.swift",
+        "format": "ios-swift/enum.swift",
+        "className": "StyleDictionaryEnum",
+        "filter": {}
+      },{
+        "destination": "StyleDictionary+Struct.swift",
+        "format": "ios-swift/any.swift",
+        "className": "StyleDictionaryStruct",
+        "filter": {},
+        "options": {
+          "imports": "SwiftUI",
+          "objectType": "struct",
+          "accessControl": "internal"
+        }
+      }]
+    },
+    "ios-swift-separate-enums": {
+      "transformGroup": "ios-swift-separate",
+      "buildPath": "build/ios-swift/",
+      "files": [{
+        "destination": "StyleDictionaryColor.swift",
+        "format": "ios-swift/enum.swift",
+        "className": "StyleDictionaryColor",
+        "filter": {
+          "attributes": {
+            "category": "color"
+          }
+        }
+      },{
+        "destination": "StyleDictionarySize.swift",
+        "format": "ios-swift/enum.swift",
+        "className": "StyleDictionarySize",
+        "filter": {
+          "attributes": {
+            "category": "size"
+          }
+        }
       }]
     }
   }
